@@ -1,6 +1,5 @@
 package eu.arrowhead.application.skeleton.consumer;
 
-import java.util.Arrays;
 import java.util.List;
 
 public final class ConsumerConstants {
@@ -15,7 +14,7 @@ public final class ConsumerConstants {
 	public static final String QUERY_GET_SERVICES = "/mgmt/services";
 	public static final String QUERY_GET_INTERFACES = "/mgmt/interfaces";
 	public static final String OP_AUTH_INTRA_CLOUD = "/mgmt/intracloud";
-	public static final List<String> DEFAULT_INTERFACE_NAMES = (List<String>) Arrays.asList(INTERFACE_SECURE, INTERFACE_INSECURE);
+	public static final List<String> DEFAULT_INTERFACE_NAMES = List.of(INTERFACE_SECURE, INTERFACE_INSECURE);
 	public static final String SCHEME = "scheme";
 	public static final String HOST = "host";
 	public static final String PORT = "port";
